# hero

./: .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  README.md  dev-requirements.txt  environment.yml  gantry.py  jobs.py  pyproject.toml  requirements.txt  run-test-hero-controller.sh  run-test-hero-worker.sh  run-test.sh  run_test.sh  setup.py  test.sh
.github/workflows/: docs.yml  release.yml
docs/: hero.html  index.html  index.js
docs/api/: index.html  queue.html  role.html  task.html  utils.html
docs/auth/: cognito.html  okta.html  utils.html
docs/aws/: dynamodb.html  sqs.html
docs/config/: config.html  index.html
docs/hero/: index.html
examples/: test_00_resource.py  test_03_rds.py  test_04_dynamo.py
examples/01-basic/: hero_controller.py  hero_worker.py  run.py
examples/02-task-dependency/: hero_controller.py  hero_worker.py  run.py
examples/03-optimization/: hero_controller.py  hero_worker.py  run.py
examples/04-graph/: example_graph.csv  example_pos.json  hero_controller.py  hero_worker.py  run.py
examples/05-dask/: dask_worker.py  hero_controller.py  hero_worker.py  run.py
examples/06-scaling/: run.sh  test.py  test_hero_count.py
examples/basic/: hero_controller.py  hero_multi_queue.py  hero_worker.py  hero_worker_A.py  hero_worker_B.py  run.py
examples/eviedges/: hero_controller.py  hero_worker.py  run.py  run.sh
gantry/: __init__.py  command_line.py  gantry.py  job.py
hero/: __init__.py  auth.py  client.py  config.py  documentation.md  dynamo.py  errors.py  hero.py  hero_client.py  integrity_check.py  pull.py  queue.py  rds.py  resilent_session.py  resilient_session.py  session.py  task.py  timer.py  url_map.py
hero/api/: __init__.py  api_base.py  data_repo.py  integrity.py  integrity_check.py  queue.py  resilient_session.py  retry.py  role.py  session_hooks.py  standard_session.py  task.py  utils.py
hero/auth/: __init__.py  azure.py  boto.py  cognito.py  okta.py  utils.py
hero/aws/: __init__.py  dynamodb.py  rds.py  sqs.py  utils.py
hero/client/: __init__.py  client.py
hero/config/: __init__.py  config.py
hero/data_repo/: __init__.py  data_repo.py  data_repo_api.py  data_repo_resilient.py  errors.py
hero/lib/: __init__.py  attr_mapper.py  config.py  credentials.py  decorators.py  errors.py  event_trigger.py  helpers.py  loaders.py  oauth2_mfa.py  patched_mlflow.py  resilient_session.py  service_base.py  session_hooks.py
hero/requests/: __init__.py  resilient_meta.py  resilient_session.py  standard_session.py
hero/service/: __init__.py  decorate_all.py  resilient_service_meta.py  resilient_service_utils.py  service_base.py  service_logger.py
hero/services/: __init__.py  assistant.py  auth.py  data_repo.py  data_repo_resilient.py  m3s.py  (+4 more)
pdoc/: buildspec.yml
test/: test_auth.py  test_data_repo.py  test_decorators.py  test_m3s.py  test_ml_model_registry.py  test_search.py  test_task_engine.py
tests/: conftest.py  test_01_task.py  test_04_dynamo.py  test_05_hero.py  test_auth.py  test_config.py  test_dynamo.py  test_hero.py  test_queue.py  test_session.py  testing_environment.py
tests_hpc/: test_02_queue.py
triggers/: process_dynamo_to_rds.py  process_dynamo_to_sqs.py
(+86 files in other folders)
