[tool.poetry]
name = "hero"
version = "0.12.0"
authors = [
    "Monte Lunacek <monte.lunacek@nrel.gov>",
    "Nick Wunder <nick.wunder@nrel.gov>",
]
maintainers = [
    "Monte Lunacek <monte.lunacek@nrel.gov>",
    "Nick Wunder <nick.wunder@nrel.gov>",
    "Joseph Smith <joseph.smith@nrel.gov>",
]
description = "Python client for HERO"
readme = "README.md"
license = "Proprietary"
keywords = ["hero", "task engine", "data repo", "search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]

[tool.poetry.dependencies]
python = ">=3.10, <=3.12"
requests = "^2.32.3"
tenacity = "^8.3.0"
pyjwt = "^2.8.0"
tqdm = "^4.66.4"
cryptography = "^44.0.3"

[tool.poetry.urls]
Homepage = "https://github.nrel.gov/Hero/hero"
Documentation = "https://github.nrel.gov/Hero/hero"
Repository = "https://github.nrel.gov/Hero/hero"
"Bug Tracker" = "https://github.nrel.gov/Hero/hero/issues"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pre-commit = "^3.8.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
